# amistoso-scraper

./: Cargo.toml
src/: main.rs
