[package]
name = "amistoso-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beep = "0.3.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
scraper = "0.15.0"
tokio = {version = "1.26.0", features = ["full"]}
